--- a/Mission_Clock/Base.lproj/Main.storyboard
+++ b/Mission_Clock/Base.lproj/Main.storyboard
@@ -27,47 +27,45 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="118"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="알람" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EuH-Vp-N6w">
-                                                    <rect key="frame" x="20" y="20" width="69.5" height="78"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="40"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="오전" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pu9-ED-gtT">
-                                                    <rect key="frame" x="217.5" y="20" width="52" height="36"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                                    <rect key="frame" x="20" y="25" width="61" height="42"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="35"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NGx-xe-tfu" customClass="WeekView" customModule="Mission_Clock" customModuleProvider="target">
-                                                    <rect key="frame" x="89.5" y="76" width="324.5" height="32"/>
+                                                    <rect key="frame" x="20" y="82" width="310" height="26"/>
+                                                    <color key="backgroundColor" red="0.99953407049999998" green="0.98835557699999999" blue="0.47265523669999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="00 : 00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CEt-BV-5I8">
-                                                    <rect key="frame" x="289.5" y="20" width="94.5" height="36"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                                    <rect key="frame" x="101" y="25" width="109.5" height="42"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="35"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZoN-oG-r5F">
+                                                    <rect key="frame" x="340" y="25" width="51" height="68"/>
+                                                </switch>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="EuH-Vp-N6w" firstAttribute="leading" secondItem="FNS-K2-Hez" secondAttribute="leading" constant="20" id="1nH-Hh-l4u"/>
-                                                <constraint firstItem="CEt-BV-5I8" firstAttribute="leading" secondItem="Pu9-ED-gtT" secondAttribute="trailing" constant="20" id="N6C-oJ-1DF"/>
-                                                <constraint firstItem="EuH-Vp-N6w" firstAttribute="top" secondItem="FNS-K2-Hez" secondAttribute="top" constant="20" id="PTf-mk-Ulf"/>
-                                                <constraint firstAttribute="trailing" secondItem="NGx-xe-tfu" secondAttribute="trailing" id="R3S-OY-839"/>
-                                                <constraint firstItem="NGx-xe-tfu" firstAttribute="top" secondItem="CEt-BV-5I8" secondAttribute="bottom" constant="20" id="UPG-Lx-lJc"/>
-                                                <constraint firstAttribute="bottom" secondItem="EuH-Vp-N6w" secondAttribute="bottom" constant="20" id="W3i-gP-UbL"/>
-                                                <constraint firstAttribute="trailing" secondItem="CEt-BV-5I8" secondAttribute="trailing" constant="30" id="WfZ-r7-9lu"/>
-                                                <constraint firstAttribute="bottom" secondItem="NGx-xe-tfu" secondAttribute="bottom" constant="10" id="aIc-1K-bTU"/>
-                                                <constraint firstItem="CEt-BV-5I8" firstAttribute="top" secondItem="FNS-K2-Hez" secondAttribute="top" constant="20" id="lAF-Xr-cN2"/>
-                                                <constraint firstItem="NGx-xe-tfu" firstAttribute="leading" secondItem="EuH-Vp-N6w" secondAttribute="trailing" id="llD-HX-Hrh"/>
-                                                <constraint firstItem="NGx-xe-tfu" firstAttribute="top" secondItem="Pu9-ED-gtT" secondAttribute="bottom" constant="20" id="pcl-sd-hge"/>
-                                                <constraint firstItem="Pu9-ED-gtT" firstAttribute="top" secondItem="FNS-K2-Hez" secondAttribute="top" constant="20" id="wS7-nj-R7h"/>
+                                                <constraint firstItem="Pu9-ED-gtT" firstAttribute="top" secondItem="FNS-K2-Hez" secondAttribute="top" constant="25" id="2At-Yr-ibN"/>
+                                                <constraint firstItem="CEt-BV-5I8" firstAttribute="leading" secondItem="Pu9-ED-gtT" secondAttribute="trailing" constant="20" id="39p-OX-8eU"/>
+                                                <constraint firstAttribute="bottom" secondItem="NGx-xe-tfu" secondAttribute="bottom" constant="10" id="3LI-C5-qw9"/>
+                                                <constraint firstItem="Pu9-ED-gtT" firstAttribute="leading" secondItem="FNS-K2-Hez" secondAttribute="leading" constant="20" id="69h-xl-viB"/>
+                                                <constraint firstItem="CEt-BV-5I8" firstAttribute="top" secondItem="FNS-K2-Hez" secondAttribute="top" constant="25" id="6uP-RU-WB3"/>
+                                                <constraint firstAttribute="bottom" secondItem="ZoN-oG-r5F" secondAttribute="bottom" constant="25" id="Cke-T8-Oun"/>
+                                                <constraint firstItem="NGx-xe-tfu" firstAttribute="top" secondItem="Pu9-ED-gtT" secondAttribute="bottom" constant="15" id="JG9-17-hs8"/>
+                                                <constraint firstItem="ZoN-oG-r5F" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="NGx-xe-tfu" secondAttribute="trailing" constant="10" id="QJb-LK-bog"/>
+                                                <constraint firstItem="ZoN-oG-r5F" firstAttribute="top" secondItem="FNS-K2-Hez" secondAttribute="top" constant="25" id="UHQ-oz-6uc"/>
+                                                <constraint firstAttribute="trailing" secondItem="ZoN-oG-r5F" secondAttribute="trailing" constant="25" id="Uc9-UH-HVI"/>
+                                                <constraint firstItem="NGx-xe-tfu" firstAttribute="leading" secondItem="FNS-K2-Hez" secondAttribute="leading" constant="20" id="VXT-Ro-VzH"/>
+                                                <constraint firstItem="NGx-xe-tfu" firstAttribute="top" secondItem="CEt-BV-5I8" secondAttribute="bottom" constant="15" id="tFk-rb-WZS"/>
+                                                <constraint firstItem="ZoN-oG-r5F" firstAttribute="leading" secondItem="NGx-xe-tfu" secondAttribute="trailing" priority="750" constant="10" id="wGb-Gf-TQo"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="apmLabel" destination="Pu9-ED-gtT" id="RfD-ke-hXD"/>
                                             <outlet property="clockLabel" destination="CEt-BV-5I8" id="5fI-4e-Trf"/>
-                                            <outlet property="titleLabel" destination="EuH-Vp-N6w" id="rox-eD-Ssr"/>
                                             <outlet property="weekView" destination="NGx-xe-tfu" id="034-ok-S6o"/>
                                             <segue destination="Jjo-7i-68K" kind="show" identifier="editshowDetail" id="Epg-v1-WJY"/>
                                         </connections>
@@ -101,7 +99,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="926.08695652173924" y="93.75"/>
+            <point key="canvasLocation" x="1188" y="94"/>
         </scene>
         <!--Clock Detail View Controller-->
         <scene sceneID="LIY-Ck-xn9">
@@ -111,37 +109,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PX1-Wq-1Am">
-                                <rect key="frame" x="84" y="123" width="251" height="34"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="제목" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sr3-o1-Bvz">
-                                <rect key="frame" x="32" y="130" width="30" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dtj-vb-jzf" customClass="WeekView" customModule="Mission_Clock" customModuleProvider="target">
-                                <rect key="frame" x="82" y="327" width="292" height="46"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="반복" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4A4-vS-2lm">
-                                <rect key="frame" x="30" y="340" width="30" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="시간" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Bu-MT-fno">
-                                <rect key="frame" x="32" y="266" width="30" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="미션" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z6B-iY-XLa">
                                 <rect key="frame" x="32" y="545" width="30" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -157,13 +124,18 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="time" minuteInterval="1" style="inline" translatesAutoresizingMaskIntoConstraints="NO" id="D9o-oq-YIR">
-                                <rect key="frame" x="84" y="247" width="236" height="59"/>
+                                <rect key="frame" x="32" y="159" width="207" height="56"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <locale key="locale" localeIdentifier="ko"/>
                                 <connections>
                                     <action selector="dataPicker:" destination="Jjo-7i-68K" eventType="valueChanged" id="c3s-Lo-pdo"/>
                                 </connections>
                             </datePicker>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dtj-vb-jzf" customClass="WeekView" customModule="Mission_Clock" customModuleProvider="target">
+                                <rect key="frame" x="45" y="274" width="292" height="46"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.99953407049999998" green="0.98835557699999999" blue="0.47265523669999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Pq1-lW-zCV"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -174,15 +146,20 @@
                                 <action selector="dismissView:" destination="Jjo-7i-68K" id="VzE-ZR-gS9"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" title="저장" id="gsU-1I-P2s"/>
+                        <barButtonItem key="rightBarButtonItem" title="저장" id="gsU-1I-P2s">
+                            <connections>
+                                <action selector="saveButton:" destination="Jjo-7i-68K" id="kus-lD-Kzg"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="pickerView" destination="D9o-oq-YIR" id="RWd-sw-OP9"/>
-                        <outlet property="titlrField" destination="PX1-Wq-1Am" id="UEH-fA-GNc"/>
                         <outlet property="weekView" destination="dtj-vb-jzf" id="etx-jO-V6L"/>
+                        <segue destination="70t-Cr-D4N" kind="unwind" identifier="toClockList" unwindAction="unwindToClockListWithSender:" id="jbt-yk-yas"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="znd-eC-vnK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="70t-Cr-D4N" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="2273.913043478261" y="93.75"/>
         </scene>
@@ -206,7 +183,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="Epg-v1-WJY"/>
+        <segue reference="xNR-uS-8EV"/>
     </inferredMetricsTieBreakers>
     <resources>
         <systemColor name="systemBackgroundColor">
